# face-viewer

./: .gitignore  Cargo.toml  README.md  segmentation_fault
src/: lib.rs  main.rs
src/basel_face_model/hdf5/: mod.rs  model_params.rs  morphable_model.rs
src/benchmarks/: mod.rs  ndarray_vs_nalgebra.rs
src/control_panel/: mod.rs
src/view_3d/: mod.rs  normal.rs  shaders.rs  vertex.rs
