[package]
name = "face-viewer"
version = "0.1.0"
authors = ["Piotr Gogola <gogola.piotr@interia.pl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glium = "0.29.1"
hdf5 = "0.7.1"
nalgebra = "0.27.1"
ndarray = "0.14.0"
opencv = "0.53" # TODO: it is added for tests
