[package]
name = "face-viewer"
version = "0.1.0"
authors = ["Piotr Gogola <gogola.piotr@interia.pl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glium = "0.29.1"
hdf5 = "0.7.1"
nalgebra = "0.27.1"
ndarray = { version = "0.14.0", features = ["blas"] }
blas-src = { version = "0.6.1", features = ["openblas"] }
openblas-src = { version = "0.9.0", features = ["cblas"] }
rand = "0.8.4"
gtk = "0.9.0"
relm = "0.21.0"
relm-derive = "0.21.0"
